@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.125 2002/03/19 05:45:30 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.126 2002/03/19 19:44:13 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-03-20 07:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/vm/estack.c
+    * Reverted some deffed out prior work in progress.
 
 2002-03-19 11:36 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/vm/garbage.c
@@ -496,7 +500,7 @@
    * source/rdd/dbf1.c
      ! fixed bug with flags in hb_dbfGoTo
 
-2002-02-20 08:50 UTC-0300 Luiz Rafael Culik <culik@sl.conex.net>
+2002-02-02 08:50 UTC-0300 Luiz Rafael Culik <culik@sl.conex.net>
   * source/rtl/isprint.c
     * Fixes for cygwin
   * utils/hbmake/hbmake.prg
